; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_dir.c_pohmelfs_name_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_dir.c_pohmelfs_name_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pohmelfs_inode = type { i32 }
%struct.pohmelfs_name = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pohmelfs_inode*, %struct.pohmelfs_name*)* @pohmelfs_name_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pohmelfs_name_free(%struct.pohmelfs_inode* %0, %struct.pohmelfs_name* %1) #0 {
  %3 = alloca %struct.pohmelfs_inode*, align 8
  %4 = alloca %struct.pohmelfs_name*, align 8
  store %struct.pohmelfs_inode* %0, %struct.pohmelfs_inode** %3, align 8
  store %struct.pohmelfs_name* %1, %struct.pohmelfs_name** %4, align 8
  %5 = load %struct.pohmelfs_inode*, %struct.pohmelfs_inode** %3, align 8
  %6 = load %struct.pohmelfs_name*, %struct.pohmelfs_name** %4, align 8
  %7 = call i32 @__pohmelfs_name_del(%struct.pohmelfs_inode* %5, %struct.pohmelfs_name* %6)
  %8 = load %struct.pohmelfs_name*, %struct.pohmelfs_name** %4, align 8
  %9 = getelementptr inbounds %struct.pohmelfs_name, %struct.pohmelfs_name* %8, i32 0, i32 0
  %10 = call i32 @list_del(i32* %9)
  %11 = load %struct.pohmelfs_name*, %struct.pohmelfs_name** %4, align 8
  %12 = call i32 @kfree(%struct.pohmelfs_name* %11)
  ret void
}

declare dso_local i32 @__pohmelfs_name_del(%struct.pohmelfs_inode*, %struct.pohmelfs_name*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @kfree(%struct.pohmelfs_name*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
